src/main/scala/chapter5/output/RunGenerics2.output
// #output
Generics2.scala:5: error: type mismatch;
 found   : java.util.ArrayList[Int]
 required: java.util.ArrayList[Nothing]
Note: Int >: Nothing, but Java-defined class ArrayList is invariant in 
type E.
You may wish to investigate a wildcard type such as `_ >: Nothing`. (SLS 
3.2.10)
list2 = list1 // Compilation Error
        ^
one error found
// #output
